# gnucash-streamlit

./: README.md  expense.ipynb  pyproject.toml
other_files/: main.ipynb  second.ipynb  sqlversion.gnucash  utils.py
src/gnuc_streamlit/: _cli.py  data.py  expense.py  report.py
src/gnuc_streamlit/.streamlit/: config.toml
src/gnuc_streamlit/core/: dateutils.py
