[project]
name = "gnuc-streamlit"
version = "0.1"
authors = [
  { name="Isa AlDoseri", email="isadosry@gmail.com" },
]
description = "GnuCash Reporting (powered by streamlit)"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas",
    "gncxml"
]

[project.scripts]
gnuc-streamlit = "gnuc_streamlit.expense:main"

[project.urls]
"Homepage" = "https://github.com/isados/gnuc-streamlit"
"Bug Tracker" = "https://github.com/isados/gnuc-streamlit/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


